revisions to GroupedProblemForm